# compass-arch

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  FINDINGS.md  LICENSE  POST.md  README.md  RUNBOOK.md  SECURITY.md  pyproject.toml
.claude/skills/engineering-coach/: Skill.md
.github/workflows/: ci.yml
analysis/: make_figures.py  pilot_115_analysis.py
assets/: make_banner.py  make_logo.py
compass/: __init__.py  agent_compass.py  agent_vanilla.py  calibration.py  models.py  policy.py  schemas.py  trajectory.py
compass/mcp/: __init__.py  bridge.py  fs_backend.py  fs_server.py  grading.py
compass/tools/: __init__.py  retail.py  retail_db.py
compass/tools/tau_retail/: __init__.py  db.py
eval/: mcp_runner.py  metrics.py  tau_bench_runner.py  trial_store.py
scripts/: export_trials.py  mcp_real_servers.py  run_local_gpu.sh  run_mcp_eval.py  run_pilot.py  run_tau_eval.py  vendor_tau_bench.py  windows_setup.sh
tasks/custom_mcp/: seed.json  tasks.json
tasks/tau_bench/: frontier_subsample.json  tasks.json  tasks_real.json
tasks/tau_bench/data/: orders.json  users.json
tests/: test_agent_compass.py  test_agent_vanilla.py  test_calibration.py  test_compass_tool_schema.py  test_fs_backend.py  test_mcp_bridge.py  test_mcp_runner.py  test_metrics.py  test_policy.py  test_retail_db.py  test_retail_tools.py  test_tau_bench_runner.py  test_tau_retail.py  test_trajectory.py  test_trial_store.py
