[project]
name = "compass"
version = "0.1.0"
description = "Calibrated agent architecture for production reliability"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.4",
    "langchain>=0.3",
    "langchain-anthropic>=0.3",
    "langchain-openai>=0.3",
    "langchain-google-genai>=2.0",
    "langchain-ollama>=0.3",
    "mcp>=1.0",
    "pydantic>=2.0",
    "matplotlib>=3.9",
    "notebook>=7.0",
    "ipykernel>=6.0",
    "langsmith>=0.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.7",
]

[tool.ruff]
# .claude holds skills and parked git worktrees — not project source
extend-exclude = [".claude"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
